// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DarkMode Dropdown component renders dark mode dropdown 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
}

.emotion-2::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-2:active:before,
.emotion-2:hover:before,
.emotion-2:focus:before,
.emotion-2[data-hover='true']:before,
.emotion-2[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:active,
.emotion-2:hover,
.emotion-2[data-hover='true'] {
  color: #001E2B;
}

.emotion-2:active::before,
.emotion-2:hover::before,
.emotion-2[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-2:focus-visible::before,
.emotion-2[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: none;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1 emotion-2"
      tabindex="0"
    >
      <div
        class="emotion-3"
      >
        <svg
          aria-label="Sun Icon"
          class=""
          fill="none"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.24 10.83a.996.996 0 1 0-1.41 1.41l.71.71a.996.996 0 1 0 1.41-1.41zM8 12c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1s1-.45 1-1v-1c0-.55-.45-1-1-1M8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6M14 7h-1c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1s-.45-1-1-1M3.76 10.83l-.71.71a.996.996 0 1 0 1.41 1.41l.71-.71a.996.996 0 1 0-1.41-1.41M8 4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1c0 .55.45 1 1 1M3.76 5.17a.996.996 0 1 0 1.41-1.41l-.71-.71a.996.996 0 1 0-1.41 1.41zM4 8c0-.55-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1M12.24 5.17l.71-.71a.996.996 0 1 0-1.41-1.41l-.71.71a.996.996 0 1 0 1.41 1.41"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`DarkMode Dropdown component renders dark mode dropdown 2`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
}

.emotion-2::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-2:active:before,
.emotion-2:hover:before,
.emotion-2:focus:before,
.emotion-2[data-hover='true']:before,
.emotion-2[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:active,
.emotion-2:hover,
.emotion-2[data-hover='true'] {
  color: #001E2B;
}

.emotion-2:active::before,
.emotion-2:hover::before,
.emotion-2[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-2:focus-visible::before,
.emotion-2[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: none;
}

.emotion-5 {
  margin: 0;
  border: none;
  padding: 0;
  overflow: visible;
  background-color: transparent;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  transition-property: opacity,transform,overlay;
  transition-duration: 150ms;
  transition-timing-function: ease-in-out;
  transition-behavior: allow-discrete;
  opacity: 0;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
  left: 0px;
  position: fixed;
  top: 6px;
  transform-origin: top left;
  opacity: 0;
  -webkit-transform: translate3d(0, -6px, 0) scale(0.8);
  -moz-transform: translate3d(0, -6px, 0) scale(0.8);
  -ms-transform: translate3d(0, -6px, 0) scale(0.8);
  transform: translate3d(0, -6px, 0) scale(0.8);
}

.emotion-5::backdrop {
  transition-property: background,overlay;
  transition-duration: 150ms;
  transition-timing-function: ease-in-out;
  transition-behavior: allow-discrete;
}

.emotion-6.emotion-6 {
  min-width: 124px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-top: 8px;
  font-weight: 700;
}

.emotion-7 {
  width: 210px;
  border-radius: 12px;
  overflow: auto;
  padding: 12px 0;
  background-color: #FFFFFF;
  border: 1px solid #E8EDEB;
  box-shadow: 0 2px 4px 1px rgba(0,30,43,0.15);
  max-height: 344px;
  box-shadow: unset;
  background-color: #001E2B;
  border: 1px solid #889397;
}

.emotion-8 {
  overflow: auto;
  margin-block-start: 0px;
  margin-block-end: 0px;
  -webkit-padding-start: 0px;
  padding-inline-start: 0px;
  padding: 0px;
}

.emotion-9 {
  width: 100%;
  padding: 0;
  list-style: none;
}

.emotion-10.emotion-10 {
  padding: 1px 24px;
}

.emotion-11 {
  display: block;
  position: relative;
  list-style: none;
  outline: none;
  border: unset;
  margin: 0;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  padding: 12px 12px;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: background-color,color;
  color: #001E2B;
  background-color: #FFFFFF;
  display: block;
  width: 100%;
  min-height: 32px;
  background-color: #FFFFFF;
  padding: 8px 12px;
  background-color: #001E2B;
}

.emotion-11:hover {
  outline: none;
  color: #001E2B;
  background-color: #E8EDEB;
}

.emotion-11:hover .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-11:hover .lg-ui-input_option-left-glyph-0000 {
  color: #001E2B;
}

.emotion-11:focus {
  outline: none;
  border: unset;
}

.emotion-11::before {
  content: '';
  position: absolute;
  left: 0;
  top: 50%;
  width: 4px;
  height: calc(100% - 16px);
  min-height: 24px;
  background-color: rgba(255, 255, 255, 0);
  border-radius: 0 6px 6px 0;
  -webkit-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -moz-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -ms-transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform-origin: 0%;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: transform,background-color;
}

.emotion-11 .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-11 .lg-ui-input_option-left-glyph-0000 {
  color: #5C6C75;
}

.emotion-11,
.emotion-11:hover {
  background-color: #E3FCF7;
}

.emotion-11::before,
.emotion-11:hover::before {
  -webkit-transform: scaleY(1) translateY(-50%);
  -moz-transform: scaleY(1) translateY(-50%);
  -ms-transform: scaleY(1) translateY(-50%);
  transform: scaleY(1) translateY(-50%);
  background-color: #00A35C;
}

.emotion-11 .lg-ui-input_option-title-0000,
.emotion-11:hover .lg-ui-input_option-title-0000 {
  color: #00684A;
  font-weight: bold;
}

.emotion-11 .lg-ui-input_option-left-glyph-0000,
.emotion-11:hover .lg-ui-input_option-left-glyph-0000 {
  color: #00A35C;
}

.emotion-11 .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-11 .lg-ui-input_option-description-0000 {
  color: #C1C7C6;
}

.emotion-11 .lg-ui-input_option-left-glyph-0000 {
  color: #C1C7C6;
}

.emotion-11:hover {
  background-color: #3D4F58;
}

.emotion-11:hover .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-11:hover .lg-ui-input_option-description-0000 {
  color: #E8EDEB;
}

.emotion-11:hover .lg-ui-input_option-left-glyph-0000 {
  color: #F9FBFA;
}

.emotion-11,
.emotion-11:hover {
  background-color: #001E2B;
}

.emotion-11 .lg-ui-input_option-title-0000,
.emotion-11:hover .lg-ui-input_option-title-0000 {
  color: #00ED64;
}

.emotion-11 .lg-ui-input_option-left-glyph-0000,
.emotion-11:hover .lg-ui-input_option-left-glyph-0000 {
  color: #00ED64;
}

.emotion-11::before,
.emotion-11:hover::before {
  background-color: #00ED64;
}

.emotion-12 {
  display: grid;
  grid-template-columns: 16px 1fr 16px;
  grid-template-areas: 'left-glyph text text';
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.emotion-13 {
  grid-area: left-glyph;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #5C6C75;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
}

.emotion-14 {
  grid-area: text;
  line-height: 16px;
}

.emotion-15 {
  overflow-wrap: anywhere;
  font-size: inherit;
  line-height: inherit;
  font-weight: normal;
  -webkit-transition: color 150ms ease-in-out;
  transition: color 150ms ease-in-out;
}

.emotion-16 {
  font-weight: 500;
}

.emotion-19 {
  display: block;
  position: relative;
  list-style: none;
  outline: none;
  border: unset;
  margin: 0;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  padding: 12px 12px;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: background-color,color;
  color: #001E2B;
  background-color: #FFFFFF;
  display: block;
  width: 100%;
  min-height: 32px;
  background-color: #FFFFFF;
  padding: 8px 12px;
  background-color: #001E2B;
}

.emotion-19:hover {
  outline: none;
  color: #001E2B;
  background-color: #E8EDEB;
}

.emotion-19:hover .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-19:hover .lg-ui-input_option-left-glyph-0000 {
  color: #001E2B;
}

.emotion-19:focus {
  outline: none;
  border: unset;
}

.emotion-19::before {
  content: '';
  position: absolute;
  left: 0;
  top: 50%;
  width: 4px;
  height: calc(100% - 16px);
  min-height: 24px;
  background-color: rgba(255, 255, 255, 0);
  border-radius: 0 6px 6px 0;
  -webkit-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -moz-transform: scale3d(0, 0.3, 0) translateY(-50%);
  -ms-transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform: scale3d(0, 0.3, 0) translateY(-50%);
  transform-origin: 0%;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: transform,background-color;
}

.emotion-19 .lg-ui-input_option-title-0000 {
  color: #001E2B;
}

.emotion-19 .lg-ui-input_option-left-glyph-0000 {
  color: #5C6C75;
}

.emotion-19 .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-19 .lg-ui-input_option-description-0000 {
  color: #C1C7C6;
}

.emotion-19 .lg-ui-input_option-left-glyph-0000 {
  color: #C1C7C6;
}

.emotion-19:hover {
  background-color: #3D4F58;
}

.emotion-19:hover .lg-ui-input_option-title-0000 {
  color: #E8EDEB;
}

.emotion-19:hover .lg-ui-input_option-description-0000 {
  color: #E8EDEB;
}

.emotion-19:hover .lg-ui-input_option-left-glyph-0000 {
  color: #F9FBFA;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1 emotion-2"
      tabindex="0"
    >
      <div
        class="emotion-3"
      >
        <svg
          aria-label="Sun Icon"
          class=""
          fill="none"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.24 10.83a.996.996 0 1 0-1.41 1.41l.71.71a.996.996 0 1 0 1.41-1.41zM8 12c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1s1-.45 1-1v-1c0-.55-.45-1-1-1M8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6M14 7h-1c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1s-.45-1-1-1M3.76 10.83l-.71.71a.996.996 0 1 0 1.41 1.41l.71-.71a.996.996 0 1 0-1.41-1.41M8 4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1c0 .55.45 1 1 1M3.76 5.17a.996.996 0 1 0 1.41-1.41l-.71-.71a.996.996 0 1 0-1.41 1.41zM4 8c0-.55-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1M12.24 5.17l.71-.71a.996.996 0 1 0-1.41-1.41l-.71.71a.996.996 0 1 0 1.41 1.41"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4"
    />
    <div
      class="emotion-5"
      popover="manual"
    >
      <div
        class="lg-ui-popover-content-0000"
      >
        <div
          class="emotion-6 emotion-7"
          data-theme="light"
        >
          <ul
            class="emotion-8"
            data-lgid="lg-menu"
            data-testid="lg-menu"
            role="menu"
          >
            <li
              class="lg-ui-lg-menu-menu_item-0000 emotion-9"
              data-testid="lg-menu-menu_item"
              id="_0001ogs5w"
              role="none"
            >
              <button
                aria-current="true"
                aria-disabled="false"
                class="lg-ui-input_option-0000 emotion-10 emotion-11"
                data-depth="0"
                data-id="_0001ogs5w"
                data-index="0"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="lg-ui-input_option-content-0000 emotion-12"
                >
                  <div
                    class="lg-ui-input_option-left-glyph-0000 emotion-13"
                  >
                    <svg
                      aria-label="Sun Icon"
                      class=""
                      fill="none"
                      height="34"
                      role="img"
                      viewBox="0 0 16 16"
                      width="34"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M12.24 10.83a.996.996 0 1 0-1.41 1.41l.71.71a.996.996 0 1 0 1.41-1.41zM8 12c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1s1-.45 1-1v-1c0-.55-.45-1-1-1M8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6M14 7h-1c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1s-.45-1-1-1M3.76 10.83l-.71.71a.996.996 0 1 0 1.41 1.41l.71-.71a.996.996 0 1 0-1.41-1.41M8 4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v1c0 .55.45 1 1 1M3.76 5.17a.996.996 0 1 0 1.41-1.41l-.71-.71a.996.996 0 1 0-1.41 1.41zM4 8c0-.55-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1h1c.55 0 1-.45 1-1M12.24 5.17l.71-.71a.996.996 0 1 0-1.41-1.41l-.71.71a.996.996 0 1 0 1.41 1.41"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="emotion-14"
                  >
                    <div
                      class="lg-ui-input_option-title-0000 emotion-15"
                    >
                      <div
                        class="emotion-16"
                      >
                        Light
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li
              class="lg-ui-lg-menu-menu_item-0000 emotion-9"
              data-testid="lg-menu-menu_item"
              id="_0003cxkbt"
              role="none"
            >
              <button
                aria-current="false"
                aria-disabled="false"
                class="lg-ui-input_option-0000 emotion-10 emotion-19"
                data-depth="0"
                data-id="_0003cxkbt"
                data-index="1"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="lg-ui-input_option-content-0000 emotion-12"
                >
                  <div
                    class="lg-ui-input_option-left-glyph-0000 emotion-13"
                  >
                    <svg
                      aria-label="Moon Icon"
                      class=""
                      fill="none"
                      height="34"
                      role="img"
                      viewBox="0 0 16 16"
                      width="34"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.787 10.074a.71.71 0 0 0-.864-.116c-.125.077-.26.135-.394.192-1.766.72-3.888-.21-4.704-2.208-.73-1.795-.086-3.734 1.344-4.617a.72.72 0 0 0 .317-.807A.71.71 0 0 0 8.795 2H8.67c-3.312 0-6 2.688-6 6s2.688 6 6 6a6 6 0 0 0 5.232-3.062.715.715 0 0 0-.125-.864z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="emotion-14"
                  >
                    <div
                      class="lg-ui-input_option-title-0000 emotion-15"
                    >
                      <div
                        class="emotion-16"
                      >
                        Dark
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
            <li
              class="lg-ui-lg-menu-menu_item-0000 emotion-9"
              data-testid="lg-menu-menu_item"
              id="_00051echq"
              role="none"
            >
              <button
                aria-current="false"
                aria-disabled="false"
                class="lg-ui-input_option-0000 emotion-10 emotion-19"
                data-depth="0"
                data-id="_00051echq"
                data-index="2"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="lg-ui-input_option-content-0000 emotion-12"
                >
                  <div
                    class="lg-ui-input_option-left-glyph-0000 emotion-13"
                  >
                    <svg
                      height="34"
                      id="Layer_1"
                      viewBox="0 0 24 24"
                      width="34"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="currentColor"
                      >
                        <path
                          d="M12,18.92c-.29,0-.55.11-.76.32-.21.21-.32.46-.32.76v2c0,.29.11.55.32.76.21.21.46.32.76.32s.55-.11.76-.32c.21-.21.32-.46.32-.76v-2c0-.29-.11-.55-.32-.76-.21-.21-.46-.32-.76-.32Z"
                        />
                        <path
                          d="M5.59,7.1c.22.21.48.31.77.32.29,0,.54-.1.74-.32.21-.22.31-.47.31-.76,0-.29-.1-.54-.31-.76l-1.06-1.07c-.21-.22-.46-.33-.76-.32-.3,0-.55.12-.76.34-.21.22-.32.48-.33.78,0,.29.1.54.32.75l1.08,1.05Z"
                        />
                        <path
                          d="M5.07,12c0-.29-.11-.55-.32-.76-.21-.21-.46-.32-.76-.32H2c-.29,0-.55.11-.76.32-.21.21-.32.46-.32.76s.11.55.32.76c.21.21.46.32.76.32h2c.29,0,.55-.11.76-.32.21-.21.32-.46.32-.76Z"
                        />
                        <path
                          d="M6.35,16.59c-.29,0-.54.11-.76.31l-1.08,1.06c-.22.21-.33.46-.32.76s.12.55.34.76c.22.2.48.31.78.32s.54-.09.75-.31l1.04-1.08c.2-.22.31-.48.32-.77.01-.29-.09-.54-.31-.74-.22-.21-.47-.31-.76-.31Z"
                        />
                        <path
                          d="M15,14.27c-1.48,0-2.73-.51-3.74-1.52-1.02-1.02-1.53-2.26-1.53-3.74,0-.53.09-1.02.23-1.5-.53.24-1.01.57-1.46,1.01-.96.96-1.44,2.13-1.44,3.49s.48,2.53,1.44,3.49c.96.96,2.13,1.44,3.49,1.44s2.53-.48,3.49-1.44c.44-.44.77-.93,1.01-1.46-.48.14-.97.23-1.5.23Z"
                        />
                        <path
                          d="M18.41,16.9c-.22-.2-.48-.31-.77-.32-.29-.01-.54.09-.74.31-.21.22-.31.47-.31.76,0,.29.11.54.31.76l1.06,1.08c.21.22.46.33.76.32.3,0,.55-.12.76-.34.21-.22.32-.48.33-.78,0-.29-.1-.54-.32-.75l-1.07-1.04Z"
                        />
                      </g>
                      <g>
                        <path
                          d="M16.77,12.23c-1.31,0-2.41-.45-3.3-1.34-.9-.9-1.35-2-1.35-3.3,0-1.12.36-2.12,1.08-2.99.72-.88,1.65-1.4,2.8-1.59.15-.03.28-.03.38,0,.11.03.19.09.25.17.06.08.1.18.1.3,0,.12-.03.25-.09.4-.1.2-.17.41-.23.62s-.08.44-.08.67c0,.79.28,1.47.84,2.03.56.56,1.24.84,2.03.84.23,0,.46-.03.68-.08.22-.05.43-.13.62-.22.14-.06.27-.09.39-.09.12,0,.22.03.29.09.08.06.14.13.17.24.03.1.03.23,0,.38-.17,1.11-.69,2.04-1.56,2.78-.87.74-1.88,1.11-3.02,1.11Z"
                          fill="currentColor"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    class="emotion-14"
                  >
                    <div
                      class="lg-ui-input_option-title-0000 emotion-15"
                    >
                      <div
                        class="emotion-16"
                      >
                        System
                      </div>
                    </div>
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DarkMode Dropdown component updates dark mode when selecting a different option 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
}

.emotion-1 {
  display: block;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  cursor: pointer;
}

.emotion-1>div {
  position: relative;
}

.emotion-2 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #C1C7C6;
}

.emotion-2::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-2:active:before,
.emotion-2:hover:before,
.emotion-2:focus:before,
.emotion-2[data-hover='true']:before,
.emotion-2[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:active,
.emotion-2:hover,
.emotion-2[data-hover='true'] {
  color: #F9FBFA;
}

.emotion-2:active::before,
.emotion-2:hover::before,
.emotion-2[data-hover='true']::before {
  background-color: rgba(232,237,235,0.1);
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  color: #F9FBFA;
  box-shadow: 0 0 0 2px #001E2B,0 0 0 4px #0498EC;
}

.emotion-2:focus-visible::before,
.emotion-2[data-focus='true']::before {
  background-color: rgba(232,237,235,0.1);
}

.emotion-3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  display: none;
}

<div
    class="emotion-0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Dark Mode Menu"
      aria-labelledby="Dark Mode Menu"
      class="emotion-1 emotion-2"
      tabindex="0"
    >
      <div
        class="emotion-3"
      >
        <svg
          aria-label="Moon Icon"
          class=""
          fill="none"
          height="24"
          role="img"
          viewBox="0 0 16 16"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.787 10.074a.71.71 0 0 0-.864-.116c-.125.077-.26.135-.394.192-1.766.72-3.888-.21-4.704-2.208-.73-1.795-.086-3.734 1.344-4.617a.72.72 0 0 0 .317-.807A.71.71 0 0 0 8.795 2H8.67c-3.312 0-6 2.688-6 6s2.688 6 6 6a6 6 0 0 0 5.232-3.062.715.715 0 0 0-.125-.864z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-4"
    />
  </div>
</DocumentFragment>
`;
